# ScribeOne

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
src/scribeone/: app.py  main.py
src/scribeone/core/: document.py  fileio.py
src/scribeone/theme/: dark.qss  light.qss
src/scribeone/ui/: about.py  dialogs.py  encoding_prompt.py  main_window.py  messages.py  sidebar.py  sidebar_panel.py  snackbar.py  theme_manager.py
src/scribeone/utils/: recent_files.py
tests/: test_close_guard.py  test_fileio.py
