[project]
name = "scribeone"
version = "0.1.0"
description = "ScribeOne – Minimal, modern single-document editor (PyQt6)"
authors = [{ name = "ScribeOne Authors" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.6",
  "charset-normalizer>=3.3.2", # optional for smarter encoding detection
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-qt>=4",
  "ruff>=0.5.6",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
scribeone = "scribeone.main:main"
